<resources>
    <string name="app_name">SavingDataApplication</string>
    <string name="prefs_file_name">PREFS_FILE</string>
    <string name="title_activity_leader_board_">LeaderBoard_Activity</string>
    <string name="preferences_Button">Show my preferences</string>
    <string name="leader_id">id</string>
    <string name="leader_name">name</string>
    <string name="leader_score">score</string>
    <string name="button_name">Register</string>
    <string name="button_name2">Show DB</string>
    <string name="RegisterForLeaderBoard">View Leader Board Activity</string>
    <string name="update_button_name">Update</string>
    <string name="delete_db_button_name">Reset Database</string>
    <string name="remove_button_name">De-Register</string>
    <string name="title_activity_internal_external">InternalExternalActivity</string>
    <string name="FileInputTextHint">Enter Text here</string>
    <string name="GoforInternalExternalDemo">Internal External Memory Demo</string>
</resources>
