<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#c2051b7f">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <EditText
            android:layout_width="237dp"
            android:layout_height="53dp"
            android:hint="@string/leader_id"
            android:id="@+id/editText11" />

        <EditText
            android:layout_width="237dp"
            android:layout_height="53dp"
            android:hint="@string/leader_name"
            android:id="@+id/editText2" />

        <EditText
            android:layout_width="237dp"
            android:layout_height="53dp"
            android:hint="@string/leader_score"
            android:id="@+id/editText3" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name"
        android:id="@+id/saveInSQL"
        android:background="#261c1c"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_button_name"
        android:id="@+id/updateInSQL"
        android:background="#261c1c"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name2"
        android:id="@+id/showDbFromSQL"
        android:background="#261c1c"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_db_button_name"
        android:id="@+id/DropDBFromSQL"
        android:background="#261c1c"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_button_name"
        android:id="@+id/DeleteFromSQL"
        android:background="#261c1c"
        android:textColor="#ffffff"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="hi!"
        android:id="@+id/textView_result"
        android:layout_gravity="center_horizontal"
        android:background="#261c1c"
        android:textColor="#ffffff"
        />


</LinearLayout>